Fixed problems with navbar on mobile

--- a/src/scss/bootstrap/_navbar.scss
+++ b/src/scss/bootstrap/_navbar.scss
@@ -106,6 +106,9 @@
 
 // Button for toggling the navbar when in its collapsed state
 .navbar-toggler {
+  position: absolute;
+  top: 0.65rem;
+  right: 0.75rem;
   padding: $navbar-toggler-padding-y $navbar-toggler-padding-x;
   font-size: $navbar-toggler-font-size;
   line-height: 1;
